Less guava code now that BREE is Java 11 in wikitext.ui.tests
Change-Id: I7a66a52beaf741facce8cad4001e37ab8c4f6376